--- a/software/docs/energy_storage.bib
+++ b/software/docs/energy_storage.bib
@@ -1505,7 +1505,122 @@ In this thesis, the thermodynamics and electrochemistry associated with water el
 	author = {Barbarossa, V. and Bassano, C. and Deiana, P. and Vanga, G.},
 	editor = {Falco, Marcello De and Iaquaniello, Gaetano and Centi, Gabriele},
 	year = {2013},
-	keywords = {CH4, CO2 hydrogenation, Industrial processes for SNG, Ni-based catalyst, Sabatier reaction},
+	keywords = {Sabatier reaction, CH4, CO2 hydrogenation, Industrial processes for SNG, Ni-based catalyst},
 	pages = {123--145},
 	file = {Barbarossa et al_2013_CO2 Conversion to CH4.pdf:/home/ali/Dropbox/Zotero/Barbarossa et al_2013_CO2 Conversion to CH4.pdf:application/pdf}
+}
+
+@misc{noauthor_consortium_nodate,
+	title = {Consortium receives funding to investigate offshore hydrogen production},
+	url = {https://orsted.com/en/media/newsroom/news/2021/01/837698488913840},
+	abstract = {ITM Power, Ørsted, Siemens Gamesa Renewable Energy, and Element Energy have been awarded EUR 5 million in funding from The Fuel Cells and Hydrogen Joint Undertaking (FCH2-JU) under the European Commission to demonstrate and investigate a combined wind turbine and electrolyser system designed for operation in marine environments.},
+	language = {en},
+	urldate = {2021-01-09},
+	file = {Snapshot:/home/ali/Zotero/storage/S9ZNGTD2/837698488913840.html:text/html}
+}
+
+@article{nicholson_pyomodae_2018,
+	title = {pyomo.dae: a modeling and automatic discretization framework for optimization with differential and algebraic equations},
+	volume = {10},
+	issn = {1867-2949, 1867-2957},
+	shorttitle = {pyomo.dae},
+	url = {http://link.springer.com/10.1007/s12532-017-0127-0},
+	doi = {10.1007/s12532-017-0127-0},
+	abstract = {We describe pyomo.dae, an open source Python-based modeling framework that enables high-level abstract speciﬁcation of optimization problems with differential and algebraic equations. The pyomo.dae framework is integrated with the Pyomo open source algebraic modeling language, and is available at http: //www.pyomo.org. One key feature of pyomo.dae is that it does not restrict users to standard, predeﬁned forms of differential equations, providing a high degree of modeling ﬂexibility and the ability to express constraints that cannot be easily speciﬁed in other modeling frameworks. Other key features of pyomo.dae are the ability to specify optimization problems with high-order differential equations and partial differential equations, deﬁned on restricted domain types, and the ability to automatically transform high-level abstract models into ﬁnite-dimensional algebraic problems that can be solved with off-the-shelf solvers. Moreover, pyomo.dae users can leverage existing capabilities of Pyomo to embed differential equation models within stochastic and integer programming models and mathematical programs with equilibrium constraint formulations. Collectively, these features enable the exploration of new modeling concepts, discretization schemes, and the benchmarking of state-of-the-art optimization solvers.},
+	language = {en},
+	number = {2},
+	urldate = {2021-01-10},
+	journal = {Mathematical Programming Computation},
+	author = {Nicholson, Bethany and Siirola, John D. and Watson, Jean-Paul and Zavala, Victor M. and Biegler, Lorenz T.},
+	month = jun,
+	year = {2018},
+	pages = {187--223},
+	file = {Nicholson et al. - 2018 - pyomo.dae a modeling and automatic discretization.pdf:/home/ali/Zotero/storage/FEQXHNFV/Nicholson et al. - 2018 - pyomo.dae a modeling and automatic discretization.pdf:application/pdf}
+}
+
+@book{de_falco_co2_2013,
+	title = {{CO2}: {A} valuable source of carbon},
+	shorttitle = {{CO2}},
+	publisher = {Springer},
+	author = {De Falco, Marcello and Iaquaniello, Gaetano and Centi, Gabriele},
+	year = {2013},
+	file = {De Falco et al_2013_CO2.pdf:/home/ali/Dropbox/Zotero/De Falco et al_2013_CO2.pdf:application/pdf;Snapshot:/home/ali/Zotero/storage/KP3FM5U2/10.html:text/html}
+}
+
+@misc{noauthor_fundamentals_2021,
+	type = {Text},
+	title = {Fundamentals of {Reservoir} {Rock} {Properties} - 2nd edition},
+	url = {https://www.qscience.com/content/book/9789927137273},
+	abstract = {\&\#160;Fundamentals of Reservoir Rock Properties\&\#160; discusses several essential rock properties needed for petroleum engineers and geoscientists. The topics covered are porosity, rock compressibility, permeability, fluid saturation, electrical properties of reservoir rocks, wettability, capillary pressure, and relative permeability. The final chapter integrates all the properties with a discussion on the application. The book covers the topics in a step-by-step fashion with tons of illustrative figures. Each topic is presented clearly with a wide range of illustrations and simplified explanations.Book DOI: https://doi.org/10.5339/Fundamentals\_of\_Reservoir\_Rock\_Properties\_2ndEdition\&\#160;Key Features\&\#160; • A step-by-step approach. • Provides numerous examples and problems on each covered topic. • Written in clear English language to appeal to global students. • Numerous illustrative figures to solidify the understanding of the concepts. • Summary highlighting the main points of each chapter. • End of chapters questions.This title has a complementary booklet “Reservoir Rock Properties Essentials” that summarizes the different topics covered in the text Fundamentals of Reservoir Rock Properties. It is simple and easy-to-follow format covers each concept explored in the text in a one-page article. The booklet highlights each property with a basic knowledge that intends to convey a general understanding of the covered topics. It’s the perfect companion for students and researchers everywhere. Please click on the “Supplements” tab to view the booklet.Booklet DOI: https://doi.org/10.5339/Reservoir\_Rock\_Properties\_Essentials\&\#160;Author Information:\&\#160;Dr. Nayef Alyafei, Assistant Professor in the Petroleum Engineering Department at Texas A\&amp;M University at Qatar.Dr. Nayef Alyafei received his Ph.D. in Petroleum Engineering from Imperial College London in 2015 and joined Texas A\&amp;M University as a faculty member in 2015. Dr. Alyafei is known for his passion in teaching with a unique teaching style. He received several teaching awards such as Teaching Excellence Award 2019, Faculty of the year 2019, and the Distinguished Achievement College-level Award for Teaching. In addition, he developed an undergraduate technical elective course and made significant curriculum changes to several courses in the department. Dr. Alyafei’s research focuses on multi-phase flow in porous media.\&\#160;Reviews:\&\#160;“This excellent text book provides much-needed reference on reservoir rock properties. Dr. Nayef Alyafei has based this work on his own popular lecture courses and his extensive research in multiphase flow in porous media. A wide range of topics is presented clearly with excellent illustrations and explanations throughout. The approach follows an easy-to-follow coherent progression of ideas and is pedagogical in its presentation, making this work ideal as a textbook for undergraduate or post-graduate studies in petroleum engineering, hydrology or related disciplines. The book provides a much needed reference on petrophysics which is also valuable for researchers and professionals working in the oil industry. It is also of interest to the growing body of students, researchers, scientists and engineers working on flow in porous media with a variety of applications from hydrocarbon recovery to carbon dioxide storage. I will certainly recommend this work to my own students and colleagues, and use it in my teaching.” - Professor Martin Blunt, Imperial College London},
+	language = {en},
+	urldate = {2021-01-11},
+	month = jan,
+	year = {2021},
+	note = {Publisher: QScience.com},
+	file = {Snapshot:/home/ali/Zotero/storage/XN98WJDM/9789927137273.html:text/html}
+}
+
+@article{challiwala_novel_2021,
+	title = {A novel {CO} 2 utilization technology for the synergistic co-production of multi-walled carbon nanotubes and syngas},
+	volume = {11},
+	copyright = {2021 The Author(s)},
+	issn = {2045-2322},
+	url = {https://www.nature.com/articles/s41598-021-80986-2},
+	doi = {10.1038/s41598-021-80986-2},
+	abstract = {Dry reforming of methane (DRM) is a well-known process in which CH4 and CO2 catalytically react to produce syngas. Solid carbon is a well-known byproduct of the DRM but is undesirable as it leads to catalyst deactivation. However, converting CO2 and CH4 into solid carbon serves as a promising carbon capture and sequestration technique that has been demonstrated in this study by two patented processes. In the first process, known as CARGEN technology (CARbon GENerator), a novel concept of two reactors in series is developed that separately convert the greenhouse gases (GHGs) into multi-walled carbon nanotubes (MWCNTs) and syngas. CARGEN enables at least a 50\% reduction in energy requirement with at least 65\% CO2 conversion compared to the DRM process. The second process presents an alternative pathway for the regeneration/reactivation of the spent DRM/CARGEN catalyst using CO2. Provided herein is the first report on an experimental demonstration of a 'switching' technology in which CO2 is utilized in both the operation and the regeneration cycles and thus, finally contributing to the overall goal of CO2 fixation. The following studies support all the results in this work: physisorption, chemisorption, XRD, XPS, SEM, TEM, TGA, ICP, and Raman analysis.},
+	language = {en},
+	number = {1},
+	urldate = {2021-01-14},
+	journal = {Scientific Reports},
+	author = {Challiwala, Mohamed S. and Choudhury, Hanif A. and Wang, Dingdi and El-Halwagi, Mahmoud M. and Weitz, Eric and Elbashir, Nimir O.},
+	month = jan,
+	year = {2021},
+	note = {Number: 1
+Publisher: Nature Publishing Group},
+	pages = {1417},
+	file = {Challiwala et al_2021_A novel CO 2 utilization technology for the synergistic co-production of.pdf:C\:\\Users\\aliak\\Dropbox\\Zotero\\Challiwala et al_2021_A novel CO 2 utilization technology for the synergistic co-production of.pdf:application/pdf;Snapshot:/home/ali/Zotero/storage/LFFTACJ5/s41598-021-80986-2.html:text/html}
+}
+
+@article{heinemann_enabling_2021,
+	title = {Enabling large-scale hydrogen storage in porous media – the scientific challenges},
+	language = {en},
+	journal = {Energy Environ. Sci.},
+	author = {Heinemann, Niklas and Alcalde, Juan and Miocic, Johannes M and Hangx, Suzanne J T and Kallmeyer, Jens and Ostertag-Henning, Christian and Hassanpouryouzband, Aliakbar and Thaysen, Eike M and Strobel, Gion J and Schmidt-Hattenberger, Cornelia and Edlmann, Katriona and Wilkinson, Mark and Bentham, Michelle and Haszeldine, R Stuart and Carbonell, Ramon and Rudloﬀ, Alexander},
+	year = {2021},
+	pages = {12},
+	file = {Heinemann et al. - 2021 - Enabling large-scale hydrogen storage in porous me.pdf:/home/ali/Zotero/storage/BXT9F9KF/Heinemann et al. - 2021 - Enabling large-scale hydrogen storage in porous me.pdf:application/pdf}
+}
+
+@article{heinemann_enabling_2021-1,
+	title = {Enabling large-scale hydrogen storage in porous media – the scientific challenges},
+	issn = {1754-5706},
+	url = {https://pubs.rsc.org/en/content/articlelanding/2021/ee/d0ee03536j},
+	doi = {10.1039/D0EE03536J},
+	abstract = {Expectations for energy storage are high but large-scale underground hydrogen storage in porous media (UHSP) remains largely untested. This article identifies and discusses the scientific challenges of hydrogen storage in porous media for safe and efficient large-scale energy storage to enable a global hydrogen economy. To facilitate hydrogen supply on the scales required for a zero-carbon future, it must be stored in porous geological formations, such as saline aquifers and depleted hydrocarbon reservoirs. Large-scale UHSP offers the much-needed capacity to balance inter-seasonal discrepancies between demand and supply, decouple energy generation from demand and decarbonise heating and transport, supporting decarbonisation of the entire energy system. Despite the vast opportunity provided by UHSP, the maturity is considered low and as such UHSP is associated with several uncertainties and challenges. Here, the safety and economic impacts triggered by poorly understood key processes are identified, such as the formation of corrosive hydrogen sulfide gas, hydrogen loss due to the activity of microbes or permeability changes due to geochemical interactions impacting on the predictability of hydrogen flow through porous media. The wide range of scientific challenges facing UHSP are outlined to improve procedures and workflows for the hydrogen storage cycle, from site selection to storage site operation. Multidisciplinary research, including reservoir engineering, chemistry, geology and microbiology, more complex than required for CH4 or CO2 storage is required in order to implement the safe, efficient and much needed large-scale commercial deployment of UHSP.},
+	language = {en},
+	urldate = {2021-01-19},
+	journal = {Energy \& Environmental Science},
+	author = {Heinemann, Niklas and Alcalde, Juan and Miocic, Johannes M. and Hangx, Suzanne J. T. and Kallmeyer, Jens and Ostertag-Henning, Christian and Hassanpouryouzband, Aliakbar and Thaysen, Eike M. and Strobel, Gion J. and Schmidt-Hattenberger, Cornelia and Edlmann, Katriona and Wilkinson, Mark and Bentham, Michelle and Haszeldine, R. Stuart and Carbonell, Ramon and Rudloff, Alexander},
+	month = jan,
+	year = {2021},
+	note = {Publisher: The Royal Society of Chemistry},
+	file = {Heinemann et al_2021_Enabling large-scale hydrogen storage in porous media – the scientific.pdf:/home/ali/Dropbox/Zotero/Heinemann et al_2021_Enabling large-scale hydrogen storage in porous media – the scientific.pdf:application/pdf;Snapshot:/home/ali/Zotero/storage/WZ3N45WC/D0EE03536J.html:text/html}
+}
+
+@book{aziz_petroleum_1979,
+	title = {Petroleum reservoir simulation},
+	volume = {476},
+	publisher = {Applied Science Publishers},
+	author = {Aziz, Khalid},
+	year = {1979},
+	file = {Snapshot:/home/ali/Zotero/storage/L6AICTKM/10003415786.html:text/html}
+}
+
+@misc{noauthor_orsted_nodate,
+	title = {Ørsted takes final investment decision on first renewable hydrogen project},
+	url = {https://orsted.com/en/media/newsroom/news/2021/01/672305561121775},
+	abstract = {Ørsted has taken final investment decision on the Danish demonstration project H2RES, which will use offshore wind energy to produce renewable hydrogen. The project is expected to produce its first hydrogen in late 2021 and will be Ørsted's first renewable hydrogen project in operation.},
+	language = {en},
+	urldate = {2021-01-21},
+	file = {Snapshot:/home/ali/Zotero/storage/XVF268NA/672305561121775.html:text/html}
 }
